[package]
name = "yaet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
features = "0.10.0"
home = "0.5.9"
pkcs8 = "0.10.2"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }
sha2 = "0.10.8"
