[package]
name = "yaet"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
features = "0.10.0"
home = "0.5.9"
pkcs8 = "0.10.2"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }
sha2 = "0.10.8"
